force-app/main/default/objects/Asset/fields/Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Details__c</fullName>
    <label>Access Details</label>
    <type>TextArea</type>
</CustomField>