force-app/main/default/objects/Asset/fields/Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Access_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Required</label>
    <type>Checkbox</type>
</CustomField>