force-app/main/default/objects/Asset/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the pumpstation is a building or a non-building. If it&apos;s a building check this box to true. Based on this the jobs will be assigned to two people or one person</description>
    <label>Building</label>
    <type>Checkbox</type>
</CustomField>