force-app/main/default/objects/Asset/fields/Business_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Area_Code__c</fullName>
    <label>Business Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>