force-app/main/default/objects/Asset/fields/Comp_Key__c.field-meta.xml
<CustomField>
    <fullName>Comp_Key__c</fullName>
    <description>Source field is Asset Key from EAM, 8 digit number.</description>
    <externalId>true</externalId>
    <label>Comp Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>