force-app/main/default/objects/Asset/fields/Component_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Component_Type_Code__c</fullName>
    <label>Component Type Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>