force-app/main/default/objects/Asset/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <description>Address FLAT Number</description>
    <label>Flat</label>
    <length>20</length>
    <type>Text</type>
</CustomField>