force-app/main/default/objects/Asset/fields/Location_Address_Key__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Key__c</fullName>
    <label>Location Address Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>