force-app/main/default/objects/Asset/fields/Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Location_Description__c</fullName>
    <description>Description for the Location of the Asset, source of data is EAM</description>
    <label>Location Description</label>
    <type>TextArea</type>
</CustomField>