force-app/main/default/objects/Asset/fields/MSN_IsDummyAsset__c.field-meta.xml
<CustomField>
    <fullName>MSN_IsDummyAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag &quot;Dummy Assets&quot; that are used in the &quot;Work Done&quot; process in case a field crew team member cannot find a Compkey or Serial number for an installed asset in their GIS application.</description>
    <inlineHelpText>Please only tick this for &quot;Dummy Assets&quot; which should show up for field crew on the mobile app in the &quot;Work Done&quot; process in case they cannot find a CompKey in GIS.</inlineHelpText>
    <label>Is Dummy Asset</label>
    <type>Checkbox</type>
</CustomField>