force-app/main/default/objects/Asset/fields/Needs_Traffic_Management__c.field-meta.xml
<CustomField>
    <fullName>Needs_Traffic_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Traffic Management</label>
    <type>Checkbox</type>
</CustomField>