force-app/main/default/objects/Asset/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>