force-app/main/default/objects/Asset/fields/Size_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Asset__c</fullName>
    <description>This field needs to be manually populated from GIS or via file upload. We are not getting the value from integrations.</description>
    <label>Size of Asset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>