force-app/main/default/objects/Asset/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <label>Street Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>