force-app/main/default/objects/Asset/fields/Tier_1_Facility__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Facility__c</fullName>
    <label>Tier 1 - Facility</label>
    <length>80</length>
    <type>Text</type>
</CustomField>