force-app/main/default/objects/Asset/fields/Tier_1_Facility_Description__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Facility_Description__c</fullName>
    <label>Tier 1 - Facility Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>