force-app/main/default/objects/Asset/fields/Tier_2_Process__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Process__c</fullName>
    <label>Tier 2 - Process</label>
    <length>80</length>
    <type>Text</type>
</CustomField>