force-app/main/default/objects/Asset/fields/Tier_2_Process_Description__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Process_Description__c</fullName>
    <label>Tier 2 - Process Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>