force-app/main/default/objects/Asset/listViews/Dummy_Assets.listView-meta.xml
<ListView>
    <fullName>Dummy_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Asset_Type__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Comp_Key__c</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>Street_Name__c</columns>
    <columns>House_Number__c</columns>
    <columns>Street_Type__c</columns>
    <columns>Suburb__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MSN_IsDummyAsset__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Dummy Assets</label>
</ListView>